fix: copy and paste buttons z-index

--- a/src/app/shared/components/copy-button/copy-button.component.scss
+++ b/src/app/shared/components/copy-button/copy-button.component.scss
@@ -7,7 +7,7 @@ button {
   color: var(--gray-400);
   border: 1px solid var(--gray-800);
   border-radius: 0.25rem;
-  z-index: 10;
+  z-index: 1;
   top: 0.625rem;
   right: 0.625rem;
   position: absolute;
